--- a/www/app/css/view-album.css
+++ b/www/app/css/view-album.css
@@ -1,4 +1,3 @@
-
 /*  Album */
 
 .view-album {
@@ -6,32 +5,134 @@
 }
 
 .view-album__header {
-  padding: var(--site-padding);
+  padding: 20px var(--site-padding) 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
-.view-album__back {
-  margin: 0 0 15px;
+.view-album___site-name {
+  font-size: var(--f-size-big);
+  font-weight: 400;
 }
 
-.view-album__back-link {
-  opacity: 0.3;
-
+.view-album__dropdown {
+  border: 1.5px solid #000;
+  border-radius: 25px;
+  font-weight: 400;
+  max-height: 50px;
+  overflow: hidden;
+  padding: 5px 20px;
+  position: relative;
+  transition: max-height 0.5s ease;
 }
-.view-album__back-link:hover {
-  opacity: 1;
+
+.view-album__dropdown:hover {
+  background-color: var(--c-bg);
+  overflow: auto;
+  max-height: none;
 }
 
-.view-album__back-link::before {
-  content: '← ';
+/* arrow */
+.view-album__dropdown::after {
+  border-bottom: solid 2px black;
+  border-right: solid 2px black;
+  content: '';
+  display: block;
+  height: 10px;
+  position: absolute;
+  right: 20px;
+  top: 14px;
+  transform: rotate(45deg);
+  width: 10px;
+}
+
+
+.view-album__dropdown-list {
+  list-style: none;
+  margin: 0;
+  padding: 0 20px 0 0 ;
+  transition: transform 0.5s ease;
+}
+
+.view-album__dropdown-list--current-1 {
+  transform: translateY(calc(1 * -50px));
+}
+
+.view-album__dropdown-list--current-2 {
+  transform: translateY(calc(2 * -50px));
+}
+
+.view-album__dropdown-list--current-3 {
+  transform: translateY(calc(3 * -50px));
+}
+
+.view-album__dropdown-list--current-4 {
+  transform: translateY(calc(4 * -50px));
+}
+
+.view-album__dropdown-list--current-5 {
+  transform: translateY(calc(5 * -50px));
+}
+
+.view-album__dropdown-list--current-6{
+  transform: translateY(calc(6 * -50px));
+}
+
+.view-album__dropdown-list--current-7 {
+  transform: translateY(calc(7 * -50px));
+}
+
+.view-album__dropdown-list--current-8 {
+  transform: translateY(calc(8 * -50px));
+}
+
+.view-album__dropdown-list--current-9 {
+  transform: translateY(calc(9 * -50px));
+}
+
+.view-album__dropdown-list--current-10 {
+  transform: translateY(calc(10 * -50px));
+}
+
+.view-album__dropdown:hover .view-album__dropdown-list {
+  transform: translateY(0) !important;
+}
+
+.view-album__dropdown:hover .view-album__dropdown-item:not(.view-album__dropdown-item--current) .view-album__dropdown-link{
+  color: gray;
+}
+
+.view-album__dropdown-item {
+  display: block;
+  height: 50px;
+}
+
+.view-album__dropdown-link {
+  color: black;
+  display: block;
+  font-size: var(--f-size-big);
+  font-weight: 400;
+  position: relative;
+}
+
+.view-album__dropdown-link:hover {
+  color: black !important;
+}
+
+
+.view-album__content {
+  padding: 0 var(--site-padding) 200px;
 }
 
 .view-album__title {
-  font: 400 56px / 1 georgia;
+  font: 400 56px / 1 arial;
   margin: 0 0 10px;
+  font-size: clamp(1.25rem, 1rem+2vw, 1.5rem);
 }
 
 .view-album__date {
-  font: 400 21px /1.5 georgia;
+  font: 400 21px /1.5 arial;
   margin: 0 0 30px;
   opacity: 0.4;
 }
@@ -54,13 +155,12 @@
   max-width: 100%;
 }
 
-.title-card {
-  background: var(--c-bg);
-  width: 100%;
+.view-album__section-heading {
+  padding: 10px 0 0;
 }
 
 .title-card__head {
-  font: 21px/ 1.375 georgia;
+  font: 21px/ 1.375 arial;
   margin-bottom: 15px;;
 }
 
@@ -76,55 +176,37 @@
 }
 
 
+
 /* Media queries */
 
 @media ( min-width: 960px) {
 
   .view-album__content {
-    margin-left: var(--sidebar-width);
-    padding: var(--site-padding) var(--site-padding) 400px 0;
+    padding-bottom: 200px;
+    width: 80%;
+    margin: 0 auto;
   }
 
   .view-album__header {
     position: fixed;
-    background: var(--c-bg);
-    padding-bottom: var(--site-padding);
     bottom: 0;
+    top: 0;
     z-index: 3;
-    width: var(--sidebar-width);
-  }
-
-  .view-album__header::before {
-    background: linear-gradient(0deg, var(--c-bg), rgba(7,24,39, 0));
-    content: '';
-    display: block;
-    height: 20vh;
-    left: 0;
-    padding: 0;
-    position: absolute;
-    top: -20vh;
-    width: var(--sidebar-width);
-    z-index: 4;
+    width: 100%;
   }
 
   .view-album__section-heading {
-    margin-left: calc(-1 * var(--sidebar-width));
-    padding-left: var(--site-padding);
-    padding-right: var(--site-padding);
-    position: sticky;
-    position: -webkit-sticky;
-    top: var(--site-padding);
-    width: calc(var(--sidebar-width) - 2 * var(--site-padding));
+    top: 0;
     z-index: 2;
   }
 
-  .title-card {
-    position: absolute;
+  .view-album__grid:first-child {
+    padding-top: 100px;
   }
-}
+  .view-album__section-heading {
+    padding-top: 45px;
+  }
 
-
-@media (min-width: 1100px) {
   .view-album__grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -135,3 +217,5 @@
     grid-column: 1 / 3;
   }
 }
+
+
