--- a/www/app/css/view-index.css
+++ b/www/app/css/view-index.css
@@ -1,12 +1,12 @@
 
 .view-index {
   padding: 0 var(--site-padding);
+  position: relative;
 }
 
 .view-index__title {
-  font-size: clamp(16px, 1rem + 2vw, 36px);
+  font-size: var(--f-size-big);
   font-weight: 400;
-  line-height: 1.5;
 }
 
 .view-index__list {
@@ -28,6 +28,7 @@
   display: block;
   padding: 10px 0 15px;
   text-decoration: none;
+  font-weight: 400;
 }
 
 .view-index__album-title {
