--- a/www/app/css/view-index.css
+++ b/www/app/css/view-index.css
@@ -1,6 +1,5 @@
 
 .view-index {
-  padding: 0 var(--site-padding);
   position: relative;
 }
 
@@ -12,8 +11,8 @@
 .view-index__list {
   list-style: none;
   margin: 0;
-  padding: 0;
-}
+  padding: 150px 0 0 0;
+ }
 
 .view-index__item {
   border-bottom: 1px solid var(--c-light-white);
@@ -31,8 +30,6 @@
   font-weight: 400;
 }
 
-.view-index__album-title {
-}
 
 .view-index__album-date {
   font-size: 18px;
@@ -40,3 +37,4 @@
   opacity: 0.7;
   margin-left: 20px;
 }
+
