Update album nav with JS and overlay-style menu

--- a/www/app/css/global.css
+++ b/www/app/css/global.css
@@ -2,6 +2,7 @@
   --c-bg: #fff;
   --c-base-text-color: #000;
   --c-base-link-color: blue;
+  --c-gray: #cfcfcf;
   --c-border: rgba(0, 0, 0, 0.2);
   --f-base: 16px / 1.375 Arial, sans-serif;
   --f-size-big: clamp(1.25rem, 2vw, 1.8rem);
@@ -85,8 +86,6 @@ td {
 
 
 
-
-
 .page-header {
   padding: 20px var(--site-padding) 0;
   display: flex;
@@ -98,6 +97,7 @@ td {
   font-size: var(--f-size-big);
   font-weight: 400;
 }
+
 .page-header___site-name-link {
   display: inline-block;
 }
@@ -127,9 +127,10 @@ td {
 }
 
 .site-credit {
-  opacity: 0.5;
+  color: var(--c-gray);
 }
 
 .site-credit a {
-  border-bottom: 1px solid var(--c-border);
+  color: var(--c-gray);
+  border-bottom: 1px solid var(--c-gray);
 }
