--- a/www/app/css/global.css
+++ b/www/app/css/global.css
@@ -5,7 +5,7 @@
   --c-gray: #cfcfcf;
   --c-border: rgba(0, 0, 0, 0.2);
   --f-base: 16px / 1.375 Arial, sans-serif;
-  --f-size-big: clamp(1.25rem, 2vw, 1.8rem);
+  --f-size-big: clamp(1.125rem, 2vw, 1.8rem);
   --f-size-medium: clamp(1rem, 2vw, 1.375rem);
   --sidebar-width: 350px;
   --site-padding: 5px;
@@ -83,7 +83,7 @@ td {
 }
 
 .page-header {
-  padding: 20px var(--site-padding) 0;
+  padding: 20px var(--site-padding) 20px;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
