--- a/www/app/css/view-index.css
+++ b/www/app/css/view-index.css
@@ -11,7 +11,7 @@
 .view-index__list {
   list-style: none;
   margin: 0;
-  padding: 150px 0 0 0;
+  padding: 40px 20px 40px;
  }
 
 .view-index__item {
