--- a/www/app/css/view-index.css
+++ b/www/app/css/view-index.css
@@ -11,7 +11,7 @@
 .view-index__list {
   list-style: none;
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 0 0 40px;
  }
  @media ( min-width: 960px) {
   .view-index__list {
