Bigger max-width, stop centering album index, add button hover

--- a/www/app/css/album-nav.css
+++ b/www/app/css/album-nav.css
@@ -29,6 +29,12 @@
   position: relative;
 }
 
+.album-nav__toggle:focus,
+.album-nav__toggle:hover {
+  background-color: black;
+  color: white;
+}
+
 .album-nav__curtain {
   height: 100%;
   left: 0;
