--- a/www/app/css/view-album.css
+++ b/www/app/css/view-album.css
@@ -64,12 +64,24 @@
 
   .view-album__grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    align-items: end;
+    grid-template-columns: repeat(2, 1fr);
     grid-column-gap: var(--site-padding);
   }
 
   .view-album__grid > *:first-child:last-child {
     grid-column: 1 / 3;
+  }
+}
+
+@media (min-width: 1600px) {
+
+  .view-album__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .view-album__grid > *:first-child:last-child {
+    grid-column: 1 / 4;
   }
 }
 
